# ros2-migration

./: .gitignore  LICENSE  README.md  mock_hw_interface.py  mock_hw_interface_full.py  saved_frames.json
install/: local_setup.sh  setup.sh
log/: latest_build
src/: README.md
src/leitungssatz/: CMakeLists.txt  package.xml
src/leitungssatz/include/leitungssatz/: Gripper.hpp  Main.hpp  Point.hpp  PointLoader.hpp  Robot.hpp  Task.hpp  TaskScheduler.hpp  Wrench.hpp  eigen_json.hpp
src/leitungssatz/include/leitungssatz/Tasks/: CableCheckTask.hpp  ForceTask.hpp  GrabBuchseTask.hpp  GripperTask.hpp  InterTask.hpp  MoveTask.hpp  SetCableOrientationTask.hpp  SpiralTask.hpp  ToolChangeTask.hpp  WirePushTask.hpp
src/leitungssatz/include/leitungssatz/Utils/: SimpleImagePublisher.hpp
src/leitungssatz/msg/: VectorResolution.msg
src/leitungssatz/src/: Gripper.cpp  Point.cpp  PointLoader.cpp  Robot.cpp  Task.cpp  TaskScheduler.cpp  Wrench.cpp  point_recording.cpp  tf2_publisher.cpp  touchDetection.cpp  touchDetection_service.cpp
src/leitungssatz/src/Programs/: ForceTest.cpp  GrabBuchse.cpp  Main.cpp  Main_2Terminals.cpp  PutBuchseInAufnahme.cpp  cableCheckProgram.cpp
src/leitungssatz/src/Tasks/: CableCheckTask.cpp  ForceTask.cpp  GrabBuchseTask.cpp  GripperTask.cpp  InterTask.cpp  MoveTask.cpp  SetCableOrientationTask.cpp  SpiralTask.cpp  ToolChangeTask.cpp  WirePushTask.cpp
src/leitungssatz/src/Utils/: SimpleImagePublisher.cpp
src/leitungssatz/srv/: GrabBuchse.srv  SelectCam.srv  SetCableOrientation.srv  SetExposure.srv
src/leitungssatz_interfaces/: CMakeLists.txt  package.xml
src/leitungssatz_interfaces/msg/: DashboardInfo.msg  GripperInfo.msg  JogControl.msg
src/leitungssatz_interfaces/srv/: GetTimeStamp.srv  Log.srv  Power.srv  SetClipGun.srv  SetForceTarget.srv  SetFreedrive.srv  SetGripper.srv  SetTrajectory.srv  StartJog.srv  StopMotion.srv
src/leitungssatz_ros2_driver/: CMakeLists.txt  package.xml
src/leitungssatz_ros2_driver/config/: ur5e_hardware.yaml  ur_hw_sim_params.yaml
src/leitungssatz_ros2_driver/include/leitungssatz_ros2_driver/: dashboard_client.hpp  hw_interface.hpp  hw_interface_sim.hpp  robotiq_gripper_interface.hpp  ros2_color_stream.hpp
src/leitungssatz_ros2_driver/resources/: hardware_interface_plugin.xml
src/leitungssatz_ros2_driver/src/: dashboard_client.cpp  hw_interface.cpp  hw_interface_sim.cpp  robotiq_gripper_interface.cpp  sim_service_bridge.cpp
src/ur5e_gripper_moveit_config/: .setup_assistant  package.xml
src/ur5e_gripper_moveit_config/config/: kinematics.yaml  ur.srdf  ur.urdf.xacro
src/ur5e_leitungssatz_sim/: CMakeLists.txt  package.xml
src/ur5e_leitungssatz_sim/config/: initial_positions.yaml  ur5e_controllers_gripper.yaml  ur_hw_sim_params.yaml
src/ur5e_leitungssatz_sim/launch/: spawn_ur5e_gripper.launch.py  spawn_ur5e_gripper_moveit.launch.py  spawn_ur5e_leitungssatz.launch.py  spawn_ur5e_leitungssatz_moveit.launch.py  view_ur5e_camera.launch.py  view_ur5e_gripper.launch.py
src/ur5e_leitungssatz_sim/rviz/: config_ur5e_robotiq.rviz  view_ur5e_camera.rviz
src/ur5e_leitungssatz_sim/urdf/: camera.xacro  robotiq_gripper_macro.urdf.xacro  table.urdf.xacro  ur5e.urdf.xacro  ur5e_gripper.urdf.xacro  ur5e_macro.xacro
